<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">


    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/imgFilter"
        android:src="@drawable/baseline_filter_alt_24"
        app:tint="@color/black"
        android:layout_marginStart="30dp"
        app:layout_constrainedWidth="true"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/imgSearch"
        app:layout_constraintTop_toTopOf="@id/imgSearch"
        android:layout_width="20dp"
        android:layout_height="20dp"/>

    <ImageView
        android:id="@+id/imgSearch"
        android:src="@drawable/baseline_search_24"
        app:tint="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_fromDate_hint"
        android:text="From Date"
        android:textStyle="normal"
        android:textColorHint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintStart_toStartOf="@id/imgBack"
        app:layout_constraintEnd_toStartOf="@+id/txt_todate"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/txt_fromDate"
        android:text=""
        android:textStyle="normal"
        android:textColorHint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@drawable/bg_radius_btn"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintStart_toStartOf="@id/imgBack"
        app:layout_constraintEnd_toStartOf="@+id/txt_todate"
        app:layout_constraintTop_toBottomOf="@+id/txt_fromDate_hint"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/txt_to_date_hint"
        android:text="To Date"
        android:textStyle="normal"
        android:textColorHint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:paddingHorizontal="5dp"
        app:layout_constraintStart_toEndOf="@id/txt_fromDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/txt_todate"
        android:text=""
        android:textStyle="normal"
        android:textColorHint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_radius_btn"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:paddingHorizontal="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toEndOf="@id/txt_fromDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_to_date_hint"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/txt_title"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/title"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_fromDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_dis"
        android:textSize="15sp"
        android:textStyle="normal"
        android:text="@string/dis"
        android:textColor="@color/gray"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
    tools:listitem="@layout/row_parking_detail"
    app:layout_constrainedWidth="true"
    app:layout_constraintEnd_toEndOf="@id/txt_title"
    app:layout_constraintStart_toStartOf="@id/txt_title"
    app:layout_constraintTop_toBottomOf="@id/txt_dis"
  />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_map"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_map_btn"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_location"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/location_details"
            app:layout_constraintEnd_toStartOf="@+id/txt_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_map"
            android:text="@string/map"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_location"
            app:layout_constraintTop_toTopOf="@id/img_location"
            app:layout_constraintStart_toEndOf="@+id/img_location"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>