<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggrediant">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCancel"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/discripation"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgCancel" />


    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/txt_ly"
        app:layout_constraintTop_toTopOf="@id/txt_ly" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txt_ly"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintEnd_toStartOf="@id/ly_ln"
        app:layout_constraintStart_toStartOf="@id/txtDis"
        app:layout_constraintTop_toBottomOf="@id/txtDis">

        <TextView
            android:id="@+id/txt_fn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/first_name"
            android:textColor="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_first_name"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:inputType="text"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_fn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/ly_ln"
        app:layout_constraintTop_toTopOf="@id/ly_ln" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_ln"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintLeft_toRightOf="@id/txt_ly"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_ly">

        <TextView
            android:id="@+id/txt_ln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/last_name"
            android:textColor="@color/yellow"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_last_name"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:inputType="text"
            android:textStyle="normal"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_ln" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="2dp"
        android:layout_height="55dp"
        android:background="@color/yellow"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/ly_email"
        app:layout_constraintTop_toTopOf="@id/ly_email" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:background="@drawable/bg_edittext"
        app:layout_constraintStart_toStartOf="@id/txt_ly"
        app:layout_constraintEnd_toEndOf="@id/ly_ln"
        app:layout_constraintTop_toBottomOf="@id/txt_ly">

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textColor="@color/yellow"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:inputType="text"
            android:textStyle="normal"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="2dp"
        android:layout_height="55dp"
        android:background="@color/yellow"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/ly_cc"
        app:layout_constraintTop_toTopOf="@id/ly_cc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_cc"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/txt_pn_ly"
        app:layout_constraintStart_toStartOf="@id/txt_ly"
        app:layout_constraintTop_toBottomOf="@id/ly_email">

        <TextView
            android:id="@+id/txt_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/country_code"
            android:textColor="@color/yellow"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/auto_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
            android:drawableTint="@color/gray"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_cc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="2dp"
        android:layout_height="55dp"
        android:background="@color/yellow"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/txt_pn_ly"
        app:layout_constraintTop_toTopOf="@id/txt_pn_ly" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txt_pn_ly"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_edittext"
        android:textColorHint="@color/yellow"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/ly_ln"
        app:layout_constraintStart_toEndOf="@id/ly_cc"
        app:layout_constraintTop_toTopOf="@id/ly_cc">

        <TextView
            android:id="@+id/txt_pn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="Phone Number"
            android:textColor="@color/yellow"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone_number"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:inputType="number"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/txt_pn"
            app:layout_constraintTop_toBottomOf="@id/txt_pn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="2dp"
        android:layout_height="55dp"
        android:background="@color/yellow"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/ly_pass"
        app:layout_constraintTop_toTopOf="@id/ly_pass" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_pass"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/yellow"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/ly_ln"
        app:layout_constraintStart_toStartOf="@id/txt_ly"
        app:layout_constraintTop_toBottomOf="@id/ly_cc"
        app:passwordToggleEnabled="true">

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:textColor="@color/yellow"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_pass"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/password_show_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Password"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@null"
            android:inputType="textPassword"
            android:textStyle="normal"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_pass" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_btn"
        android:text="Sign Up"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_pass"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>